# dream-of-kiki

./: .gitignore  CITATION.cff  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: coverage-targets.md
docs/milestones/: q2-conformance-negative-2026-05-10.md  q2-conformance-negative-results.json  q2plus-10-more-adversarial-2026-05-11.md  q2plus-conformance-negative-results.json
docs/milestones/studio-cpu-2026-05-04/: k2_real_substrate.py  robertson_sequential_ordering.py
docs/papers/paper1/: full-draft-fr.md  full-draft.md
docs/papers/paper1-fr/: full-draft.md
docs/papers/paper2/: outline.md  rebuttal-pocket-recursivemas.md  references.bib
docs/papers/paper2-fr/: outline.md
experiments/h1_split_mnist/: run_h1.py  run_h1_v2.py
kiki_oniric/dream/: swap.py
kiki_oniric/dream/operations/: recombine_real.py
kiki_oniric/substrates/: factory.py
kiki_oniric/substrates/_adversarial/: __init__.py  cat_a_trivial.py  cat_b_adversarial.py  cat_c_statistical.py  cat_d_modular.py  cat_e_replay_loops.py  cat_f_asymmetric.py
kiki_oniric/substrates/micro_kiki/: __init__.py  _legacy.py  handlers.py  loaders.py  oplora.py  spike_loader.py  substrate.py  ties.py
ops/: formal-reviewer-recruitment.md  tcol-outreach-plan.md
scripts/: check_status_truth.py  run_q2_conformance_audit.py
tests/conformance/adversarial/: __init__.py  test_negative_substrates.py
tests/conformance/axioms/: test_dr4_profile_inclusion.py
tests/reproducibility/: REBASELINE_NOTE.md  golden_hashes.json
tests/unit/: test_ablation_cycle3.py  test_ablation_multi_substrate.py  test_concurrent_async.py  test_esnn_operations.py  test_mega_v2_adapter.py  test_qwen_mlx_wrappers.py  test_recombine_full.py  test_runtime.py  test_statistics.py  test_substrate_factory.py
tests/unit/experiments/: conftest.py  test_g4_quater_step1.py  test_g4_quater_step2.py  test_g4_quater_step3.py
